Update Fraudes em cartão de crédito.ipynb

--- a/Fraudes em cartão de crédito.ipynb
+++ b/Fraudes em cartão de crédito.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# **Contexto**\r\n",
     "<span style=\"font-size:16pt;\">\n",
-    "É importante que as empresas de cartão de crédito sejam capazes de reconhecer transações fraudulentas de cartão de crédito, para que os clientes não sejam cobrados por itens que não compraram\n",
+    "É importante que as empresas de cartão de crédito sejam capazes de reconhecer transações fraudulentas de cartão de crédito para que os clientes não sejam cobrados por itens que não compraram\n",
     "nte\r\n",
     "O conjunto de dados contém transações efetuadas com cartões de crédito em setembro de 2013 por titulares de cartões europeus.\r\n",
     "Este conjunto de dados apresenta transações ocorridas em dois dias, onde temos 492 fraudes em 284.807 transações. O conjunto de dados é altamente desequilibrado, a classe positiva (fraudes) representa 0,172% de todas as transações.\r\n",
     "\r\n",
-    "Ele contém apenas variáveis ​​de entrada numéricas que são o resultado de uma transformação PCA. Infelizmente, devido a questões de confidencialidade, não podemos fornecer os recursos originais e mais informações básicas sobre os dados. As características V1, V2,… V28 são os principais componentes obtidos com PCA, as únicas características que não foram transformadas com PCA são 'Tempo' e 'Quantidade'. O recurso 'Tempo' contém os segundos decorridos entre cada transação e a primeira transação no conjunto de dados. O  'Valor' é o valor da transação; esse recurso pode ser usado para aprendizado sensível ao custo, dependente de exemplo. O recurso 'Classe' é a variável de resposta e assume valor 1 em caso de fraude e 0 caso contrário</span>\n",
+    "Ele contém apenas variáveis ​​de entrada numéricas que são o resultado de uma transformação PCA. Devido a questões de confidencialidade, não é possível fornecer os recursos originais e mais informações básicas sobre os dados. As características V1, V2,… V28 são os principais componentes obtidos com PCA, as únicas características que não foram transformadas com PCA são 'Tempo' e 'Quantidade'. O recurso 'Tempo' contém os segundos decorridos entre cada transação e a primeira transação no conjunto de dados. O  'Valor' é o valor da transação; esse recurso pode ser usado para aprendizado sensível ao custo, dependente de exemplo. O recurso 'Classe' é a variável de resposta e assume valor 1 em caso de fraude e 0 caso contrário</span>\n",
     "\n",
     "<span style=\"font-size:16pt;\">O download do arquivo csv que foi usado pode ser feito pelo link:\n",
     "\n",
